# Mvp_ins

./: 1.py  DB_schema.txt  README.md  env_ex.txt  livekit.toml  pyproject.toml  requirements.txt
src/: agent.py  regulations.py  search.py
src/MVP_INS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
